# small-python-projects

./: .flake8  .gitignore  CHANGELOG.rst  CONTRIBUTING.md  Changelog.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
Turtle/: circle-square-pentagon.py  circle.py  mandala.py  square.py  triangle.py
addition-quiz/: main.py
addition-quiz-1/: main.py
addition-quiz-2/: main.py  test_addition_quiz.py
bmi/: main.py
bmi-1/: main.py  test_bmi.py
bmi-2/: conftest.py  main.py  test_bmi.py
bmi-3/: conftest.py  get_values.py  main.py  test_bmi.py  test_get_values.py
bmi-4-oop/: main.py
box-volume/: main.py  test_boxcalculator.py
calculate/: calculate.md  main.py  test_calculate.py
colored-terminal-text/: main.py
fahrenheit-converter/: fahrenheit-converter.md  main.py
fizz_buzz/: main.py
haversine/: main.py
hex-to-dec/: main.py
integer-input/: get_integer.py  main.py
main-menu/: main-menu.md  main.py
panlindrome/: main.py
pycryptodome/: decrypt.py  encrypt.py  main.py
quadratic-equation/: main.py
random-password/: main.py
sysinfo/: main.py
text-handling/: data  data.txt  read_text.py
two-points-distance/: main.py
