[tool.poetry]
name = "small-python-projects"
version = "0.1.0"
description = "small Python projects for beginners"
authors = ["Bodo Schönfeld <bodo.schoenfeld@niftycode.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
